[project]
name = "atmsys"
version = "0.1.0"
description = "ATM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atmsys"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
